--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bluebird": "^3.5.0",
     "commander": "^2.11.0",
     "debug": "^3.0.0",
+    "mkdirp": "^0.5.1",
     "pg": "^7.2.0",
     "require-directory": "^2.1.1"
   },
