--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "migro",
   "version": "0.1.0",
   "description": "Lightweight database migration framework",
+  "version": "0.2.0",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/_mocha --recursive -t 30000 \"./test/**/*.test.js\""
